@@ -1,3 +1,5 @@
+- Changed the Loop node to allow more than two incoming and outgoing nodes.
+
 1.3rc1 - Monday 15 December 2008
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
